Connect business stages to people and work in default map
